--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint": "eslint --ignore-path .gitignore .",
     "lint-staged": "git diff --cached --name-only '*.js' | xargs eslint",
     "prepublish": "yarn build",
-    "test": "yarn build && best -I test/index.js -r flow-remove-types/register"
+    "test": "yarn build && best -I 'test/*.js' -r flow-remove-types/register"
   },
   "dependencies": {
     "@babel/generator": "7.0.0-rc.3",
