--- a/package.json
+++ b/package.json
@@ -17,21 +17,21 @@
     "test": "yarn build && best -I 'test/*.js' -r flow-remove-types/register"
   },
   "dependencies": {
-    "@babel/generator": "7.0.0-rc.3",
-    "@babel/traverse": "7.0.0-rc.3"
+    "@babel/generator": "7.0.0",
+    "@babel/traverse": "7.0.0"
   },
   "devDependencies": {
     "@zeit/best": "0.4.3",
     "@zeit/git-hooks": "0.1.4",
-    "babel-eslint": "8.2.6",
-    "eslint": "5.4.0",
+    "babel-eslint": "9.0.0",
+    "eslint": "5.5.0",
     "eslint-config-airbnb": "17.1.0",
     "eslint-config-prettier": "3.0.1",
     "eslint-plugin-flowtype": "2.50.0",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.1",
     "eslint-plugin-react": "7.11.1",
-    "flow-bin": "0.79.1",
+    "flow-bin": "0.80.0",
     "flow-remove-types": "1.2.3",
     "pegjs": "0.10.0",
     "prettier": "1.14.2"
