--- a/package.json
+++ b/package.json
@@ -7,52 +7,58 @@
     "lib"
   ],
   "scripts": {
-    "build": "flow-remove-types src/ -d lib/ && yarn build-parser",
+    "build": "tsc && yarn build-parser",
     "build-parser": "pegjs -o lib/parser.js src/parser.pegjs",
-    "format": "prettier --write '{src,test}/**/*.js'",
-    "format-staged": "git diff --cached --name-only '*.js' | xargs prettier --list-different",
-    "lint": "eslint --ignore-path .gitignore .",
-    "lint-staged": "git diff --cached --name-only '*.js' | xargs eslint",
+    "format": "prettier --write '{src,test}/**/*.ts'",
+    "format-staged": "git diff --cached --name-only '*.ts' | xargs prettier --list-different",
+    "lint": "eslint --ignore-pattern '*.pegjs' '{src,test}/**/*'",
+    "lint-staged": "git diff --cached --name-only '*.ts' | xargs eslint",
     "prepublish": "yarn build",
-    "test": "yarn build && best -I 'test/*.js' -r flow-remove-types/register"
+    "test": "yarn build && best -I 'test/*.ts' -r ts-node/register"
   },
   "dependencies": {
-    "@babel/generator": "7.0.0",
-    "@babel/traverse": "7.0.0"
+    "@babel/generator": "7.4.4",
+    "@babel/traverse": "7.4.5"
   },
   "devDependencies": {
-    "@zeit/best": "0.4.3",
+    "@types/babel__generator": "7.0.2",
+    "@types/babel__traverse": "7.0.7",
+    "@types/node": "12.0.8",
+    "@typescript-eslint/eslint-plugin": "1.10.2",
+    "@typescript-eslint/parser": "1.10.2",
+    "@zeit/best": "0.5.3",
     "@zeit/git-hooks": "0.1.4",
-    "babel-eslint": "9.0.0",
-    "eslint": "5.6.0",
+    "eslint": "5.16.0",
     "eslint-config-airbnb": "17.1.0",
-    "eslint-config-prettier": "3.0.1",
-    "eslint-plugin-flowtype": "2.50.0",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jsx-a11y": "6.1.1",
-    "eslint-plugin-react": "7.11.1",
-    "flow-bin": "0.81.0",
-    "flow-remove-types": "1.2.3",
+    "eslint-config-prettier": "5.0.0",
+    "eslint-plugin-import": "2.17.3",
+    "eslint-plugin-jsx-a11y": "6.2.1",
+    "eslint-plugin-react": "7.13.0",
+    "npm": "6.9.0",
     "pegjs": "0.10.0",
-    "prettier": "1.14.2"
+    "prettier": "1.18.2",
+    "ts-node": "8.3.0",
+    "typescript": "3.5.2"
   },
   "eslintConfig": {
     "extends": [
       "airbnb",
-      "plugin:flowtype/recommended",
       "prettier"
     ],
-    "parser": "babel-eslint",
+    "parser": "@typescript-eslint/parser",
     "parserOptions": {
       "ecmaVersion": 2018
     },
-    "plugins": [
-      "flowtype"
-    ]
+    "settings": {
+      "import/resolver": {
+        "node": {
+          "extensions": [".js", ".ts"]
+        }
+      }
+    }
   },
   "git": {
     "pre-commit": [
-      "flow",
       "lint-staged",
       "format-staged"
     ]
